less/about.less
.supported-units {
  display: inline-flex;
  flex-wrap: wrap;
}

.supported-unit-type {
  font-weight: 400;
  margin-bottom: -10px;
}

.supported-unit-system {
  font-weight: 500;
  margin-bottom: -15px;
}

.unit-list {
  margin-right: 25px;
}

.unit-symbols {
  margin-top: -5px;
  font-size: 12px;
}

.faq-question {
  font-weight: 400;
}

.faq-answer {
  margin-bottom: 15px;
}

@media all and (max-width: 550px) {
  .unit-list {
    margin-right: 0px;
  }

  .about {
    padding-top: 60px;
  }
}

